Distinguish between already loaded and loading variant

--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1089,13 +1089,14 @@ proc getStickyForcedUnloadMsg {} {
    return {Unload of sticky module forced}
 }
 
-proc getModWithAltVrIsLoadedMsg {mod} {
+proc getModWithAltVrIsLoadedMsg {mod is_loading} {
    set vrdesiglist {}
    foreach vr [getVariantList $mod 1] {
       lappend vrdesiglist [sgr va $vr]
    }
+   set state [expr {$is_loading ? {loading} : {loaded}}]
    return "Variant [sgr se "\{"][join $vrdesiglist [sgr se :]][sgr se "\}"]\
-      is already loaded"
+      is already $state"
 }
 
 proc getModFromDiffPathIsLoadedMsg {} {
