--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1188,7 +1188,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
                # no error if ConUn mechanism handles unload of this module
                if {![getConf auto_handling] || ![getConf conflict_unload] ||\
                   $isloading} {
-                  knerror [getModWithAltVrIsLoadedMsg $modname]
+                  knerror [getModWithAltVrIsLoadedMsg $modname $isloading]
                }
             } else {
                reportDebug "$modname ($modfile) already loaded/loading"
