No DepRe list update if unload phase fail
When unloading Dependent Reload modules, if one unload fails an error is
raised. If force mode is enabled, no evaluation may fail (as
super-sticky modules are allowed to be reloaded). So there is no need to
update DepRe module list as a failure will lead to a global error that
will stop processing.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1254,7 +1254,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
             # loaded. First perform unload phase of the reload, prior mod load
             # to ensure these dependent modules are unloaded with the same
             # loaded prereq as when they were loaded
-            set depre_list [unloadDepUnDepReModules {} $depre_list]
+            unloadDepUnDepReModules {} $depre_list
             if {[info exists swprocessing]} {
                lprepend sw_depre_list {*}$depre_list
             }
@@ -1647,8 +1647,7 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
             # unload and they are mixed to be unloaded in their reverse load
             # order. They are unloaded this way prior eventually unloading any
             # of their requirements.
-            set depre_list [unloadDepUnDepReModules $depun_list $depre_list\
-               $force]
+            unloadDepUnDepReModules $depun_list $depre_list $force
          }
 
          # register this evaluation on the main one that triggered it (prior
