--- a/.github/workflows/linux_tests.yaml
+++ b/.github/workflows/linux_tests.yaml
@@ -391,9 +391,9 @@ jobs:
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl9.0
-          curl -L --output tcl9.0b3-src.tar.gz http://downloads.sourceforge.net/tcl/tcl9.0b3-src.tar.gz
-          tar xfz tcl9.0b3-src.tar.gz
-          cd tcl9.0b3/unix
+          curl -L --output tcl9.0.0rc0-src.tar.gz http://downloads.sourceforge.net/tcl/tcl9.0.0rc0-src.tar.gz
+          tar xfz tcl9.0.0rc0-src.tar.gz
+          cd tcl9.0.0/unix
           ./configure
           make -j
           sudo make install
