Make "resource temporarily unavailable" an external error
Do not add Modules issue report web link when facing a "resource
temporarily unavailable" error when forking sub-process like logger or
pager.

Fixes #546

--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -2157,6 +2157,7 @@ proc reportFinalError {error_msg} {
          {Can't find a usable init.tcl in the following directories}\
          {interpreter uses an incompatible stubs mechanism}\
          {dlopen(}\
+         {couldn't fork child process: resource temporarily unavailable}\
          {invalid command name "tcl::mathfunc::max"}]
       set add_report_link 1
       foreach external_error $external_error_list {
