Disable pager when running for script language
Disable pager when running modulecmd.tcl script for script language
(python, perl, ruby, tcl, cmake, r and lisp).

More caution to disable pager in any case for script language whose
interpreter may specifically handle stderr, like seen with R.

Fixes #542

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -432,8 +432,10 @@ proc initStatePaginate {} {
    set pager [getConf pager]
    # empty or 'cat' pager command means no-pager
    set no_cmds [list {} cat]
-   # default pager enablement depends on pager command value
-   set paginate [expr {[file tail [lindex $pager 0]] ni $no_cmds}]
+   set only_shell_types [list sh csh fish cmd pwsh]
+   # default pager enablement depends on pager command value and current shell
+   set paginate [expr {[file tail [lindex $pager 0]] ni $no_cmds && [getState\
+      shelltype] in $only_shell_types}]
 
    # asked enablement could only nullify a previous asked disablement as it
    # requires a valid pager command configuration, which by default enables
