Fix isTopEvaluation when reloading DepRe modules
Register current module evaluation context as a state to be able to
correctly determine is we are running the top evaluation.

As DepRe reload mechanism during switch occurs outside of a modulefile
evaluation it was wrongly considered top evaluation until now.

It also fixes UReqUn mechanism from unload evaluation, which now
correctly happens everytime after main evaluation.

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -64,7 +64,8 @@ proc ongoingCommandName {commandName} {
 # triggered from modulecmd level or (3) during the evaluation of global rc
 # file. (2) and (3) are considered "extended" top evaluation contexts.
 proc isTopEvaluation {{extended 1}} {
-   return [expr {[depthState modulename] == 0 || ($extended && [depthState\
+   return [expr {([depthState modulename] == 0 && [currentState eval_context]\
+      in {{} load unload swload swunload}) || ($extended && [depthState\
       modulename] == 1 && ([aboveCommandName] in {source autoinit} ||\
       [isStateDefined rc_running]))}]
 }
