--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1110,6 +1110,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
          upvar newhidden hidden
          upvar newmsgrecid msgrecid
       }
+      lappendState eval_context $context
       # loading module is visible by default
       set hidden 0
       # error if module not found or forbidden
@@ -1405,6 +1406,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
          break
       }
    }
+   lpopState eval_context
    lpopState mode
 
    # raise error if no module has been loaded or has produced an error during
@@ -1484,6 +1486,7 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
          upvar olduasked uasked
          upvar oldmsgrecid msgrecid
       }
+      lappendState eval_context $context
       # unloading module is visible by default
       set hidden 0
       set uasked 1
@@ -1793,6 +1796,7 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
          break
       }
    }
+   lpopState eval_context
    lpopState mode
 
    return $ret
