ts: transform DepUn of ConUn into DepRe

--- a/testsuite/modulefiles.4/bar/.modulerc
+++ b/testsuite/modulefiles.4/bar/.modulerc
@@ -2,11 +2,13 @@
 if {[info exists env(TESTSUITE_CONFLICT_UNLOAD)]} {
     switch -- $env(TESTSUITE_CONFLICT_UNLOAD) {
         sticky_conflict2 - dep_sticky_conflict2 -\
-        sticky_unload2 - dep_sticky_unload2 {
+        sticky_unload2 - dep_sticky_unload2 -\
+        depun_of_conun_is_sticky1 {
             module-tag sticky bar/1
         }
         supersticky_conflict2 - dep_supersticky_conflict2 -\
-        supersticky_unload2 - dep_supersticky_unload2 {
+        supersticky_unload2 - dep_supersticky_unload2 -\
+        depun_of_conun_is_super_sticky1 {
             module-tag super-sticky bar/1
         }
     }
