No force unload of DepUn of ConUn or switched-off module
When a loading module requires a Dependent Unload module, the unload of
this module was forced when it was triggered by a Conflict Unload or a
switched-off module. The unload of such Dependent Unload module is not
forced anymore by default and an error is raised if a loading module
requiring the Dependent Unload module is detected.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1573,14 +1573,7 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
          lassign [getDiffBetweenList $prereq_list $prereq_loaded_list]\
             prereq_loading_list
          if {[llength $prereq_loading_list]} {
-            set msg [getDepLoadingMsg $prereq_loading_list]
-            if {$force} {
-               if {$context ne {depre_un}} {
-                  reportWarning $msg
-               }
-            } else {
-               knerror $msg
-            }
+            knerrorOrWarningIfForced [getDepLoadingMsg $prereq_loading_list]
          }
 
          if {[getConf auto_handling] && $auto} {
