Remove unused force argument on unloadDepUnDepReModules

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1621,7 +1621,7 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
             # unload and they are mixed to be unloaded in their reverse load
             # order. They are unloaded this way prior eventually unloading any
             # of their requirements.
-            unloadDepUnDepReModules $depun_list $depre_list $force
+            unloadDepUnDepReModules $depun_list $depre_list
          }
 
          # register this evaluation on the main one that triggered it (prior
