No force disable when calling cmdModuleUnload on UReqUn ctx
As force argument of cmdModuleUnload now only affects unload of module
depended by other loaded modules, this argument has no impact on
"urequn" unload context as a UReqUn module has no dependent by
definition.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -468,7 +468,7 @@ proc cmdModuleIntSwitch {mode tag_list args} {
             set priormodlist [lrange $modlist 0 $modidx]
             if {[set unmod [getLoadedMatchingName $swlomod {} 0\
                $priormodlist]] ne {}} {
-               cmdModuleUnload urequn match 1 0 1 $unmod
+               cmdModuleUnload urequn match 1 s 1 $unmod
             }
          }
       }
@@ -1066,7 +1066,7 @@ proc cmdModuleIntLoad {topcall command mode tag_list args} {
          foreach arg [lreverse $args] {
             if {[set unmod [getLoadedMatchingName $arg {} 0 $priormodlist]]\
                ne {}} {
-               cmdModuleUnload urequn match 1 0 1 $unmod
+               cmdModuleUnload urequn match 1 s 1 $unmod
             }
          }
       }
