Check stickiness prior processing dependent unload
Move stickiness check when unloading a module prior processing any
automated module handling mechanism.

Stickiness check procedure is renamed failOrSkipUnloadIfSticky and moved
from interp.tcl to modeval.tcl file.

Fixes #536

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1546,6 +1546,10 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
 
       pushSettings
       if {[set errCode [catch {
+         if {[failOrSkipUnloadIfSticky $modname $modfile]} {
+            continue
+         }
+
          # stop unless forced or auto handling mode enabled if unloading
          # module violates a registered prereq
          set prereq_list [getDependentLoadedModuleList [list $modname]]
